# World-Model

./: .gitignore  README.md  pyproject.toml  report.tex  report.tex.bak
scripts/: build_oracle_memory.py  compare_run_metrics.py  debug_oracle_memory.py  eval_all.py  eval_diffusion_uncertainty.py  eval_oracle_memory_subset.py  make_visual_comparison_panel.py  merge_manifests.py  prepare_movi.py  prepare_uncertainty_ablation.py  render_memory_view.py  rollout_diffusion.py  rollout_memory_model.py  rollout_nomemory.py  train_convgru_all.sh  train_diffusion.py  train_diffusion_all.sh  train_full_pipeline.sh  train_memory_model.py  train_nomemory.py  visualize_clip.py
src/world_model/: __init__.py  types.py
src/world_model/eval/: benchmark_slices.py  evaluator.py  metrics_image.py  metrics_memory.py
src/world_model/geometry/: __init__.py  camera.py
src/world_model/inference/: __init__.py  uncertainty_rollout.py
src/world_model/memory/: __init__.py  conditioning.py  demo.py  oracle_writer.py  renderer.py  update_rules.py  voxel_grid.py
src/world_model/models/: __init__.py  convgru_predictor.py  decoder.py  encoder.py  world_model.py
src/world_model/models/diffusion/: __init__.py  sampler.py  schedule.py  timestep.py  unet.py  wrapper.py
src/world_model/uncertainty/: __init__.py  calibration.py  confidence.py  heads.py
tests/: test_camera.py  test_clip_dataset.py  test_diffusion.py  test_eval.py  test_models.py  test_oracle_memory.py
