[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-world-model"
version = "0.1.0"
description = "Student-scale persistent 3D world model prototype inspired by Learning 3D Persistent Embodied World Models (2025)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "matplotlib>=3.8",
  "pillow>=10.0",
]

[project.optional-dependencies]
data = [
  "tensorflow-datasets>=4.9",
  "tensorflow>=2.16; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "tensorflow-macos==2.16.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
